--- a/data/cangjie5.dict.yaml
+++ b/data/cangjie5.dict.yaml
@@ -1,7 +1,7 @@
 # encoding: utf-8
 #
 # 說明：
-# 此處編碼來自「倉頡之友。馬來西亞」網站上可以下載到的「倉頡平臺2012」中「cj5-70000.txt」碼表的前兩萬餘字。
+# 此處編碼來自「倉頡之友。馬來西亞」網站上可以下載到的「倉頡平臺2012」中的「cj5-70000.txt」碼表。
 # encoder\rules: 在這裡，我們規定在輸入詞語時的拆字規則。
 # 在最初的版本裡，輸入一個二字的詞語需要輸入第一字的首碼、第一字的尾碼、第二次的首碼、第二次的次首碼和第二次的尾碼。
 # 比方說，輸入「陳清」一詞，我們需要輸按下「弓田水手月」。這並不符合我們大多數人的輸入習慣。
